# config-file-parser

./: Cargo.toml  Makefile  README.md  config.ini  docs.md
src/: config.rs  ini.pest  lib.rs  main.rs
tests/: ini_parser_test.rs
